fixed spacing problem

--- a/src/blue-amber.scss
+++ b/src/blue-amber.scss
@@ -38,5 +38,5 @@ $dark-theme: mat-dark-theme((
 }
 
 .dark-theme {
-  @include angular-material-color($dark-theme);
+  @include angular-material-theme($dark-theme);
 }
